--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <hr>
 <nav>
-  <a routerLink="/">Home</a> -
+  <a routerLink="/homepage">Home</a> -
   <a routerLink="/about">About</a> -
   <a routerLink="/keep-in-touch">Contact</a>
 </nav>
